Fix notify on Windows, exit properly